@@ -21,6 +21,9 @@ Things to do on the panel, in no particular order:
 * Tasklist panel that works sort of like BeOS deskbar or whatever that's called
   or like win95 taskbar, with all the hiding etc...
 
+* Add DND to logout, lock, menu and drawer, so that we can internally DND them,
+  just like launchers.
+
 Vertigo/2.0 items
 
 * Bonobo the whole bit, that is:  Make the whole thing bonobo components, to
