@@ -1,3 +1,9 @@
+Tue Dec 19 17:34:35 2000  George Lebl <jirka@5z.com>
+
+	* panel.c, launcher.[ch]:  Allow _MOVE of icons under a special
+	  type of mime type.  And thus remove the "same panel drop"
+	  restriction.
+
 Tue Dec 19 14:24:43 2000  George Lebl <jirka@5z.com>
 
 	* xstuff.[ch], foobar-widget.c, basep-widget.c:  On panel windows,	
